wip:responsiveness for 1920px

--- a/src/index.html
+++ b/src/index.html
@@ -27,7 +27,7 @@
           <span class="navbar-toggler-icon"></span>
         </button>
         <div
-          class="collapse navbar-collapse justify-"
+          class="collapse navbar-collapse nav-list"
           id="navbarSupportedContent"
         >
           <ul class="navbar-nav mx-auto mb-2 mb-lg-0 d-flex gap-lg-5">
@@ -72,7 +72,9 @@
     </nav>
     <div class="container hero-container">
       <div class="row align-items-center">
-        <div class="col-md-6 text-center order-md-last position-relative">
+        <div
+          class="col-md-6 col-xxl-5 text-center order-md-last position-relative"
+        >
           <div class="our-creative-team">
             <p class="mb-0 text-start team-text">Our Creative Team</p>
             <div class="images">
@@ -108,7 +110,7 @@
           />
         </div>
 
-        <div class="col-md-6 order-md-first">
+        <div class="col-md-6 col-xxl-7 order-md-first">
           <h1 class="hero-section-h1">
             Increase your web<br />
             traffic with our
@@ -116,7 +118,7 @@
               <img
                 src="./assets/images/expert.png"
                 alt="Expert Icon"
-                class="ms-2 img-fluid"
+                class="ms-2 img-fluid expert-icon"
                 style="height: 1em"
               />
             </span>
@@ -136,7 +138,7 @@
           <img
             src="./assets/images/Take a tour.png"
             style="height: 3em; width: auto"
-            class="ms-lg-5 mt-lg-4"
+            class="ms-lg-5 mt-lg-4 take-a-tour-img"
           />
         </div>
       </div>
@@ -149,14 +151,14 @@
               <div class="d-flex gap-2 align-items-center">
                 <img
                   src="./assets/images/social-media.png"
-                  style="width: 60px; height: 70px"
+                  class="hero-cards-img"
                 />
-                <p class="card-title hero-card-heading">
+                <h5 class="card-title hero-card-heading">
                   Social Media Management
-                </p>
+                </h5>
               </div>
 
-              <p class="mb-0 card-text hero-card-body">
+              <p class="card-text hero-card-body">
                 It is a long established fact that a reader will be distracted
                 by the readable content .It is a long established fact that .
                 <br /><br />
@@ -169,10 +171,7 @@
           <div class="card border-0 hero-cards">
             <div class="card-body">
               <div class="d-flex gap-2 align-items-center">
-                <img
-                  src="./assets/images/browser.png"
-                  style="width: 60px; height: 70px"
-                />
+                <img src="./assets/images/browser.png" class="hero-cards-img" />
                 <h5 class="card-title hero-card-heading">Email Management</h5>
               </div>
 
@@ -189,10 +188,7 @@
           <div class="card border-0 hero-cards">
             <div class="card-body">
               <div class="d-flex gap-2 align-items-center">
-                <img
-                  src="./assets/images/chart.png"
-                  style="width: 60px; height: 70px"
-                />
+                <img src="./assets/images/chart.png" class="hero-cards-img" />
                 <h5 class="card-title hero-card-heading">SEO Management</h5>
               </div>
 
@@ -219,10 +215,7 @@
         <div
           class="optimise-row row d-flex justify-content-center justify-content-lg-between"
         >
-          <div
-            class="card col-md-3 col-12 mb-4 mb-lg-0 optimise-card optimise-card-1"
-            style="width: 19rem"
-          >
+          <div class="card col-md-3 col-12 mb-4 mb-lg-0 optimise-card-1">
             <div class="card-body">
               <div class="d-flex flex-column align-items-start">
                 <img src="./assets/images/Group 673.png" />
@@ -235,42 +228,33 @@
               </p>
             </div>
           </div>
-          <div
-            class="card col-md-3 col-12 mb-4 mb-lg-0 optimise-card"
-            style="width: 19rem"
-          >
+          <div class="card col-md-3 col-12 mb-4 mb-lg-0 optimise-card-2">
             <div class="card-body">
               <div class="d-flex flex-column align-items-start">
                 <img src="./assets/images/Group 674.png" />
                 <h5 class="card-title">Content Optimisation</h5>
               </div>
 
-              <p class="card-text">
+              <p class="card-text optimise-text">
                 It is a long established fact that a reader will be distracted
                 by the readable content .It is a long
               </p>
             </div>
           </div>
-          <div
-            class="card col-md-3 col-12 mb-4 mb-lg-0 optimise-card"
-            style="width: 19rem"
-          >
+          <div class="card col-md-3 col-12 mb-4 mb-lg-0 optimise-card-3">
             <div class="card-body">
               <div class="d-flex flex-column align-items-start">
                 <img src="./assets/images/Group 676.png" />
                 <h5 class="card-title">Target Analysis</h5>
               </div>
 
-              <p class="card-text">
+              <p class="card-text optimise-text">
                 It is a long established fact that a reader will be distracted
                 by the readable content .It is a long
               </p>
             </div>
           </div>
-          <div
-            class="card col-md-3 col-12 mb-4 mb-lg-0 optimise-card"
-            style="width: 19rem"
-          >
+          <div class="card col-md-3 col-12 mb-4 mb-lg-0 optimise-card-4">
             <div class="card-body">
               <div class="d-flex flex-column align-items-start">
                 <img
@@ -280,7 +264,7 @@
                 <h5 class="card-title">Continuous Testing</h5>
               </div>
 
-              <p class="card-text">
+              <p class="card-text optimise-text">
                 It is a long established fact that a reader will be distracted
                 by the readable content .It is a long
               </p>
@@ -289,7 +273,7 @@
         </div>
       </div>
     </section>
-    <div class="container-fluid mt-3 mt-lg-0 solution-div">
+    <div class="container-fluid mt-3 mt-lg-0 solution-div py-5">
       <div
         class="solution-row row row-cols-1 row-cols-lg-2 justify-content-center"
       >
@@ -378,11 +362,11 @@
       </div>
     </div>
     <div
-      class="py-2 py-md-5 container-fluid text-center"
+      class="py-2 py-md-5 container-fluid text-center choose-container"
       style="background-color: #fafafa"
     >
       <h2>Why You Should <span style="color: #6f77f1">Choose Us</span></h2>
-      <p>
+      <p style="color: #828282">
         It is a long established fact that a reader will be distracted by the
         readable content .It is a long established<br />
         fact that a reader .It is a long established fact that a reader will
@@ -469,7 +453,7 @@
         </div>
       </div>
     </div>
-    <div class="container py-lg-5">
+    <div class="container py-lg-5 need-container">
       <div class="row row-cols-1 row-cols-lg-2">
         <div class="col-12 col-lg-6 py-5">
           <img src="./assets/images/need.png" class="img-fluid need-hero-img" />
@@ -485,7 +469,7 @@
             .It is a long.
           </p>
           <div
-            class="d-flex align-items-center gap-2 gap-lg-3 mb-1 mb-lg-3 box-container"
+            class="d-flex align-items-center gap-2 gap-lg-3 mb-1 mb-lg-3 box-container py-md-2 ps-md-2 need-cards"
           >
             <div>
               <img
@@ -501,7 +485,9 @@
               </p>
             </div>
           </div>
-          <div class="d-flex align-items-center gap-2 gap-lg-3 mb-1 mb-lg-3">
+          <div
+            class="d-flex align-items-center gap-2 gap-lg-3 mb-1 mb-lg-3 ps-md-2 py-md-2 need-cards"
+          >
             <img src="./assets/images/email.png" class="need-icon" />
             <div class="d-flex flex-column text-start box">
               <p class="box-heading">Email marketing</p>
@@ -511,7 +497,9 @@
               </p>
             </div>
           </div>
-          <div class="d-flex align-items-center gap-2 gap-lg-3 mb-1 mb-lg-3">
+          <div
+            class="d-flex align-items-center gap-2 gap-lg-3 mb-1 mb-lg-3 ps-md-2 py-md-2 need-cards"
+          >
             <img src="./assets/images/seo-logo.png" class="need-icon" />
             <div class="d-flex flex-column text-start box">
               <p class="box-heading">SEO optimization</p>
@@ -578,18 +566,18 @@
             <input
               type="text"
               placeholder="Web URL"
-              class="form-control border-0 w-100 w-lg-auto mb-2 mb-lg-0 rounded-0"
+              class="form-control border-0 w-100 w-lg-auto mb-2 mb-lg-0 rounded-0 speed-input"
               style="background-color: #f2f2f2"
             />
             <input
               type="text"
               placeholder="Email Address"
-              class="form-control border-0 w-100 w-lg-auto mb-2 mb-lg-0 rounded-0"
+              class="form-control border-0 w-100 w-lg-auto mb-2 mb-lg-0 rounded-0 speed-input"
               style="background-color: #f2f2f2"
             />
 
             <button
-              class="btn btn-warning rounded-1 border-0 mx-auto ms-lg-2 mb-2 mb-lg-0"
+              class="btn btn-warning rounded-1 border-0 mx-auto ms-lg-2 mb-2 mb-lg-0 speed-btn"
             >
               Submit
             </button>
@@ -623,10 +611,14 @@
                       >/Month</span
                     ><br />
                   </p>
-                  <p>408GB Bandwidth</p>
-                  <p>Business & Finance Analysing</p>
-                  <p>24 Hour Support</p>
-                  <p>Customer Management</p>
+                  <p style="color: #828282" class="bandwith">408GB Bandwidth</p>
+                  <p style="color: #828282" class="bandwith">
+                    Business & Finance Analysing
+                  </p>
+                  <p style="color: #828282" class="bandwith">24 Hour Support</p>
+                  <p style="color: #828282" class="bandwith">
+                    Customer Management
+                  </p>
                 </div>
                 <button
                   class="btn my-btn ms-lg-2 mb-2 mb-lg-5"
@@ -648,10 +640,14 @@
                       >/Month</span
                     ><br />
                   </p>
-                  <p>408GB Bandwidth</p>
-                  <p>Business & Finance Analysing</p>
-                  <p>24 Hour Support</p>
-                  <p>Customer Management</p>
+                  <p style="color: #828282" class="bandwith">408GB Bandwidth</p>
+                  <p style="color: #828282" class="bandwith">
+                    Business & Finance Analysing
+                  </p>
+                  <p style="color: #828282" class="bandwith">24 Hour Support</p>
+                  <p style="color: #828282" class="bandwith">
+                    Customer Management
+                  </p>
                 </div>
                 <button
                   class="btn my-btn ms-lg-2 mb-2 mb-lg-5"
@@ -673,10 +669,14 @@
                       >/Month</span
                     ><br />
                   </p>
-                  <p>408GB Bandwidth</p>
-                  <p>Business & Finance Analysing</p>
-                  <p>24 Hour Support</p>
-                  <p>Customer Management</p>
+                  <p style="color: #828282" class="bandwith">408GB Bandwidth</p>
+                  <p style="color: #828282" class="bandwith">
+                    Business & Finance Analysing
+                  </p>
+                  <p style="color: #828282" class="bandwith">24 Hour Support</p>
+                  <p style="color: #828282" class="bandwith">
+                    Customer Management
+                  </p>
                 </div>
                 <button
                   class="btn my-btn ms-lg-2 mb-2 mb-lg-5"
@@ -704,70 +704,70 @@
       </p>
       <div class="row justify-content-center">
         <div class="col-12 col-sm-6 col-lg-3 col-xl-2">
-          <div class="card mb-3 mb-lg-0">
+          <div class="card mb-3 mb-lg-0 team-cards">
             <img
               class="card-img-top img-fluid mx-auto py-2"
               src="./assets/images/person.png"
               style="width: 131px; height: 131px"
             />
             <div class="card-body">
-              <h3>Muriel Whee</h3>
+              <h4>Muriel Whee</h4>
               <p>Marketing Manager</p>
               <img src="./assets/images/link.png" />
-              <img src="./assets/images/link.png" class="ms-3" />
-              <img src="./assets/images/link.png" class="ms-3" />
-              <img src="./assets/images/link.png" class="ms-3" />
+              <img src="./assets/images/insta-icon.png" class="ms-3" />
+              <img src="./assets/images/x-icon.png" class="ms-3" />
+              <img src="./assets/images/fb-icon.png" class="ms-3" />
             </div>
           </div>
         </div>
         <div class="col-12 col-sm-6 col-lg-3 col-xl-2">
-          <div class="card mb-3 mb-lg-0">
+          <div class="card mb-3 mb-lg-0 team-cards">
             <img
               class="card-img-top img-fluid mx-auto py-2"
               src="./assets/images/person-3.png"
               style="width: 131px; height: 131px"
             />
             <div class="card-body">
-              <h3>Muriel Whee</h3>
+              <h4>Muriel Whee</h4>
               <p>Marketing Manager</p>
               <img src="./assets/images/link.png" />
-              <img src="./assets/images/link.png" class="ms-3" />
-              <img src="./assets/images/link.png" class="ms-3" />
-              <img src="./assets/images/link.png" class="ms-3" />
+              <img src="./assets/images/insta-icon.png" class="ms-3" />
+              <img src="./assets/images/x-icon.png" class="ms-3" />
+              <img src="./assets/images/fb-icon.png" class="ms-3" />
             </div>
           </div>
         </div>
         <div class="col-12 col-sm-6 col-lg-3 col-xl-2">
-          <div class="card mb-3 mb-lg-0">
+          <div class="card mb-3 mb-lg-0 team-cards">
             <img
               class="card-img-top img-fluid mx-auto py-2"
               src="./assets/images/person-2.png"
               style="width: 131px; height: 131px"
             />
             <div class="card-body">
-              <h3>Muriel Whee</h3>
+              <h4>Muriel Whee</h4>
               <p>Marketing Manager</p>
               <img src="./assets/images/link.png" />
-              <img src="./assets/images/link.png" class="ms-3" />
-              <img src="./assets/images/link.png" class="ms-3" />
-              <img src="./assets/images/link.png" class="ms-3" />
+              <img src="./assets/images/insta-icon.png" class="ms-3" />
+              <img src="./assets/images/x-icon.png" class="ms-3" />
+              <img src="./assets/images/fb-icon.png" class="ms-3" />
             </div>
           </div>
         </div>
         <div class="col-12 col-sm-6 col-lg-3 col-xl-2">
-          <div class="card">
+          <div class="card team-cards">
             <img
               class="card-img-top img-fluid mx-auto py-2"
               src="./assets/images/person-4.png"
               style="width: 131px; height: 131px"
             />
             <div class="card-body">
-              <h3>Doug Norm</h3>
+              <h4>Doug Norm</h4>
               <p>Marketing Manager</p>
               <img src="./assets/images/link.png" />
-              <img src="./assets/images/link.png" class="ms-3" />
-              <img src="./assets/images/link.png" class="ms-3" />
-              <img src="./assets/images/link.png" class="ms-3" />
+              <img src="./assets/images/insta-icon.png" class="ms-3" />
+              <img src="./assets/images/x-icon.png" class="ms-3" />
+              <img src="./assets/images/fb-icon.png" class="ms-3" />
             </div>
           </div>
         </div>
@@ -873,8 +873,11 @@
         class="d-flex w-100 justify-content-center gap-2 flex-column flex-lg-row column-gap-1 input-section"
         style="height: 57px"
       >
-        <input class="rounded border-1" placeholder="Name" />
-        <input class="rounded border-1" placeholder="Email Address" />
+        <input class="rounded border-1 subscribe-input" placeholder="Name" />
+        <input
+          class="rounded border-1 subscribe-input"
+          placeholder="Email Address"
+        />
         <button
           class="border-0 rounded"
           style="background-color: #6f77f1; color: white"
