wip:footer section responsivenss

--- a/src/index.html
+++ b/src/index.html
@@ -711,8 +711,8 @@
               style="width: 131px; height: 131px"
             />
             <div class="card-body">
-              <h4>Muriel Whee</h4>
-              <p>Marketing Manager</p>
+              <h4 class="employee-name">Muriel Whee</h4>
+              <p style="color: #828282">Marketing Manager</p>
               <img src="./assets/images/link.png" />
               <img src="./assets/images/insta-icon.png" class="ms-3" />
               <img src="./assets/images/x-icon.png" class="ms-3" />
@@ -728,8 +728,8 @@
               style="width: 131px; height: 131px"
             />
             <div class="card-body">
-              <h4>Muriel Whee</h4>
-              <p>Marketing Manager</p>
+              <h4 class="employee-name">John Doe</h4>
+              <p style="color: #828282">Marketing Manager</p>
               <img src="./assets/images/link.png" />
               <img src="./assets/images/insta-icon.png" class="ms-3" />
               <img src="./assets/images/x-icon.png" class="ms-3" />
@@ -745,8 +745,8 @@
               style="width: 131px; height: 131px"
             />
             <div class="card-body">
-              <h4>Muriel Whee</h4>
-              <p>Marketing Manager</p>
+              <h4 class="employee-name">Clay Porter</h4>
+              <p style="color: #828282">Marketing Manager</p>
               <img src="./assets/images/link.png" />
               <img src="./assets/images/insta-icon.png" class="ms-3" />
               <img src="./assets/images/x-icon.png" class="ms-3" />
@@ -762,8 +762,8 @@
               style="width: 131px; height: 131px"
             />
             <div class="card-body">
-              <h4>Doug Norm</h4>
-              <p>Marketing Manager</p>
+              <h4 class="employee-name">Doug Norm</h4>
+              <p style="color: #828282">Marketing Manager</p>
               <img src="./assets/images/link.png" />
               <img src="./assets/images/insta-icon.png" class="ms-3" />
               <img src="./assets/images/x-icon.png" class="ms-3" />
@@ -773,7 +773,7 @@
         </div>
       </div>
     </div>
-    <div class="container text-center">
+    <div class="container text-center client-container">
       <p class="mb-0 clients-heading">Our Clients Say</p>
       <p class="mb-5 clients-caption">
         It is a long established fact that a reader will be distracted<br />
@@ -783,7 +783,7 @@
         <div class="col-lg-4 clients-review">
           <div class="card clients-review-card">
             <div class="card-body">
-              <p>
+              <p style="color: #828282" class="clients-review-comment">
                 It is a long established fact that a reader will be distracted
                 by the readable content .It is a long established fact that a
                 reader
@@ -792,15 +792,15 @@
                 style="width: 50px; height: 50px"
                 src="./assets/images/person-4.png"
               />
-              <p class="mb-0">Jane Doe</p>
-              <p style="font-size: x-small; color: #828282">Ship Builder</p>
+              <p style="font-size: 12px; margin-bottom: 0px">Jane Doe</p>
+              <p style="font-size: 12px; color: #828282">Ship Builder</p>
             </div>
           </div>
         </div>
         <div class="col-lg-4 clients-review">
           <div class="card clients-review-card">
             <div class="card-body">
-              <p>
+              <p style="color: #828282">
                 It is a long established fact that a reader will be distracted
                 by the readable content .It is a long established fact that a
                 reader
@@ -810,15 +810,15 @@
                 src="./assets/images/person.png"
               />
 
-              <p class="mb-0">Jane Doe</p>
-              <p style="font-size: x-small; color: #828282">Ship Builder</p>
+              <p style="font-size: 12px; margin-bottom: 0px">Jane Doe</p>
+              <p style="font-size: 12px; color: #828282">Ship Builder</p>
             </div>
           </div>
         </div>
         <div class="col-lg-4 clients-review">
           <div class="card clients-review-card">
             <div class="card-body">
-              <p>
+              <p style="color: #828282">
                 It is a long established fact that a reader will be distracted
                 by the readable content .It is a long established fact that a
                 reader
@@ -828,15 +828,15 @@
                 src="./assets/images/person-2.png"
               />
 
-              <p class="mb-0">Jane Doe</p>
-              <p style="font-size: x-small; color: #828282">Ship Builder</p>
+              <p style="font-size: 12px; margin-bottom: 0px">Jane Doe</p>
+              <p style="font-size: 12px; color: #828282">Ship Builder</p>
             </div>
           </div>
         </div>
         <div class="col-lg-4 clients-review">
           <div class="card clients-review-card">
             <div class="card-body">
-              <p>
+              <p style="color: #828282">
                 It is a long established fact that a reader will be distracted
                 by the readable content .It is a long established fact that a
                 reader
@@ -846,8 +846,8 @@
                 src="./assets/images/person-3.png"
               />
 
-              <p class="mb-0">Jane Doe</p>
-              <p style="font-size: x-small; color: #828282">Ship Builder</p>
+              <p style="font-size: 12px; margin-bottom: 0px">Jane Doe</p>
+              <p style="font-size: 12px; color: #828282">Ship Builder</p>
             </div>
           </div>
         </div>
@@ -859,7 +859,7 @@
     >
       <p
         class="subscribe-heading"
-        style="margin-bottom: 0; font-weight: 500; font-size: 45px"
+        style="margin-bottom: 0; font-weight: 500; font-size: 30px"
       >
         Subscribe & find the perfect Cosmetics
       </p>
