feat:added changes

--- a/src/index.html
+++ b/src/index.html
@@ -58,9 +58,7 @@
               placeholder="Let's Talk"
               aria-label="search"
             />
-            <div
-              class="p-0 w-[83px] h-[77px] justify-content-center align-content-center"
-            >
+            <div class="p-0 justify-content-center align-content-center">
               <button class="btn bg-warning" type="submit">
                 <img
                   src="./assets/images/Search.png"
