feat: fixed multiple components for 1920px

--- a/src/index.html
+++ b/src/index.html
@@ -144,7 +144,7 @@
     </div>
     <div class="container mt-5">
       <div class="row flex-wrap justify-content-center">
-        <div class="col-12 col-md-4">
+        <div class="col-12 col-md-4 mb-5 mb-md-0">
           <div class="card border-0 hero-cards">
             <div class="card-body">
               <div class="d-flex gap-2 align-items-center">
@@ -166,7 +166,7 @@
             </div>
           </div>
         </div>
-        <div class="col-12 col-md-4">
+        <div class="col-12 col-md-4 mb-5 mb-md-0">
           <div class="card border-0 hero-cards">
             <div class="card-body">
               <div class="d-flex gap-2 align-items-center">
@@ -183,7 +183,7 @@
             </div>
           </div>
         </div>
-        <div class="col-12 col-md-4">
+        <div class="col-12 col-md-4 mb-5 mb-md-0">
           <div class="card border-0 hero-cards">
             <div class="card-body">
               <div class="d-flex gap-2 align-items-center">
@@ -216,7 +216,9 @@
         >
           <div class="card col-md-3 col-12 mb-4 mb-lg-0 optimise-card-1">
             <div class="card-body">
-              <div class="d-flex flex-column align-items-start">
+              <div
+                class="d-flex flex-column align-items-start optimise-card-top"
+              >
                 <img src="./assets/images/Group 673.png" />
                 <h5 class="card-title">Keyword Research</h5>
               </div>
@@ -229,7 +231,9 @@
           </div>
           <div class="card col-md-3 col-12 mb-4 mb-lg-0 optimise-card-2">
             <div class="card-body">
-              <div class="d-flex flex-column align-items-start">
+              <div
+                class="d-flex flex-column align-items-start optimise-card-top"
+              >
                 <img src="./assets/images/Group 674.png" />
                 <h5 class="card-title">Content Optimisation</h5>
               </div>
@@ -242,7 +246,9 @@
           </div>
           <div class="card col-md-3 col-12 mb-4 mb-lg-0 optimise-card-3">
             <div class="card-body">
-              <div class="d-flex flex-column align-items-start">
+              <div
+                class="d-flex flex-column align-items-start optimise-card-top"
+              >
                 <img src="./assets/images/Group 676.png" />
                 <h5 class="card-title">Target Analysis</h5>
               </div>
@@ -255,7 +261,9 @@
           </div>
           <div class="card col-md-3 col-12 mb-4 mb-lg-0 optimise-card-4">
             <div class="card-body">
-              <div class="d-flex flex-column align-items-start">
+              <div
+                class="d-flex flex-column align-items-start optimise-card-top"
+              >
                 <img
                   src="./assets/images/Group 677.png"
                   style="width: 85px; height: 92px"
@@ -304,7 +312,7 @@
       <div
         class="row row-cols-lg-3 d-flex justify-content-lg-around gap-lg-3 business-row"
       >
-        <div class="card border-0 col-12 col-md-3 col-lg-3">
+        <div class="card border-0 col-12 col-md-3 col-lg-3 secondary-cards">
           <div class="card-body px-0">
             <div class="d-flex flex-column align-items-start card-heading">
               <img
@@ -312,7 +320,7 @@
                 style="width: 70px; height: 70px"
                 class="mb-1"
               />
-              <h5 class="card-title">Grow Your Busines</h5>
+              <h5 class="card-title">Grow Your Business</h5>
             </div>
 
             <p class="card-text">
@@ -322,7 +330,7 @@
             </p>
           </div>
         </div>
-        <div class="card border-0 col-12 col-md-3 col-lg-3">
+        <div class="card border-0 col-12 col-md-3 col-lg-3 secondary-cards">
           <div class="card-body px-0">
             <div class="d-flex flex-column align-items-start card-heading">
               <img
@@ -340,7 +348,7 @@
             </p>
           </div>
         </div>
-        <div class="card border-0 col-12 col-md-3 col-lg-3">
+        <div class="card border-0 col-12 col-md-3 col-lg-3 secondary-cards">
           <div class="card-body px-0">
             <div class="d-flex flex-column align-items-start card-heading">
               <img
@@ -370,11 +378,13 @@
         readable content .It is a long established<br />
         fact that a reader .It is a long established fact that a reader will
       </p>
-      <div class="card-group">
+      <div class="card-group justify-content-center">
         <div
           class="row row-cols-1 row-cols-md-3 row-cols-lg-3 px-md-4 gap-lg-1 gap-md-2 justify-content-center"
         >
-          <div class="col col-9 col-sm-7 col-md-3 mb-3 mb-md-0 col-lg-3 px-0">
+          <div
+            class="col col-9 col-sm-7 col-md-3 mb-3 mb-md-0 col-lg-3 px-0 choose-column"
+          >
             <div
               class="card border-0 d-flex flex-column justify-content-center align-items-center py-2 px-lg-3 py-lg-5 choose-card"
             >
@@ -399,7 +409,9 @@
               </button>
             </div>
           </div>
-          <div class="col col-9 col-sm-7 col-md-3 mb-3 mb-md-0 col-lg-3 px-0">
+          <div
+            class="col col-9 col-sm-7 col-md-3 mb-3 mb-md-0 col-lg-3 px-0 choose-column"
+          >
             <div
               class="card border-0 d-flex flex-column justify-content-center align-items-center py-2 px-lg-3 py-lg-5 choose-card"
             >
@@ -424,7 +436,9 @@
               </button>
             </div>
           </div>
-          <div class="col col-9 col-sm-7 col-md-3 mb-3 mb-md-0 col-lg-3 px-0">
+          <div
+            class="col col-9 col-sm-7 col-md-3 mb-3 mb-md-0 col-lg-3 px-0 choose-column"
+          >
             <div
               class="card border-0 d-flex flex-column justify-content-center align-items-center py-2 px-lg-3 py-lg-5 choose-card"
             >
